# APEX-SAM

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
apex_sam/: __init__.py  config.py  constants.py  types.py
apex_sam/cli/: build_expert_database.py  build_local_db.py  build_support_pool.py  eval.py  inference.py  preprocess_dataset.py
apex_sam/evaluation/: metrics.py  reporting.py  runner.py
apex_sam/hmf/: __init__.py  fusion.py
apex_sam/module1_qar/: __init__.py
apex_sam/pipeline/: segmenter.py
apex_sam/premask/: chamfer.py  edges.py  structure.py
apex_sam/prompting/: voronoi.py
apex_sam/retrieval/: dino_encoder.py  local_db.py
apex_sam/sam/: predictor.py
apex_sam/support/: __init__.py  filesystem_pool.py  interface.py  private_qar.py
assets/: README.md
assets/css/: site.css
checkpoints/: README.md
configs/: chaos_mr_minimal.yaml
expert_database/: README.md
scripts/: build_chaos_local_db.sh  module1_qar_placeholder.sh  run_chaos_eval.sh  run_chaos_minimal.sh  run_single_inference.sh
tests/: test_cli_smoke.py  test_config.py  test_local_db.py  test_metrics.py  test_module1_placeholders.py  test_support_pool.py
