[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-sam"
version = "0.1.0"
description = "Open-source implementation of APEX-SAM (APM + vanilla HMF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "torchvision",
  "opencv-python",
  "scikit-image",
  "scipy",
  "SimpleITK",
  "matplotlib",
  "scikit-learn",
]

[project.scripts]
apex-sam-module1-qar = "apex_sam.cli.build_expert_database:main"
apex-sam-preprocess = "apex_sam.cli.preprocess_dataset:main"
apex-sam-infer = "apex_sam.cli.inference:main"
apex-sam-eval = "apex_sam.cli.eval:main"

[tool.setuptools.packages.find]
include = ["apex_sam*"]
